// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioCheckToggleCard Checkbox Card should render checked state UI correctly 1`] = `
<DocumentFragment>
  .c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c9 {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-size: 14px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:focus-visible + div {
  --icon-border-color: #4f6f8f;
  --icon-border-shadow-color: #f4f6f8;
}

.c1:active + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked + div {
  --background-color: #e8f2ff;
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:checked:hover + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked:focus-visible + div {
  --icon-border-color: #049;
}

.c1:disabled + div {
  color: #c0cad5;
}

.c3 {
  --background-color: #fff;
  --border-color: transparent;
  --default-card-margin: 16px;
  --icon-color: #4f6f8f;
  --icon-border-color: transparent;
  --icon-border-shadow-color: transparent;
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  padding: var(--default-card-margin);
}

.c5 {
  min-width: 0;
  width: 100%;
}

.c5 > svg {
  border: 1px solid var(--icon-border-color);
  border-radius: var(--icon-border-radius);
  color: var(--icon-color);
  padding: 2px;
  box-shadow: inset 0 0 0 5px var(--icon-border-shadow-color);
}

.c5 + * {
  margin-top: 16px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > :first-child + * {
  margin-top: 16px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        checked=""
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        type="checkbox"
        value="example-1"
      />
      <div
        class="c2 c3"
        data-testid="rdt-card-main"
      >
        <div
          class="c4 c5"
          data-testid="rdt-card-header"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="rdt-card-title"
              font-size="14px"
              style="line-height: 24px;"
            >
              Title
            </div>
          </div>
          <svg
            aria-hidden="true"
            class="c8 c9"
            fill="currentcolor"
            focusable="false"
            height="24"
            role="img"
            style="--icon-border-radius: 4px; border-width: 1px;"
            tabindex="-1"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 3h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm4 14l9-8.6L17.6 7 10 14.3l-3.6-3.5L5 12.2l5 4.8z"
            />
          </svg>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard Checkbox Card should render unchecked state UI correctly 1`] = `
<DocumentFragment>
  .c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c9 {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-size: 14px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:focus-visible + div {
  --icon-border-color: #4f6f8f;
  --icon-border-shadow-color: #f4f6f8;
}

.c1:active + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked + div {
  --background-color: #e8f2ff;
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:checked:hover + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked:focus-visible + div {
  --icon-border-color: #049;
}

.c1:disabled + div {
  color: #c0cad5;
}

.c3 {
  --background-color: #fff;
  --border-color: transparent;
  --default-card-margin: 16px;
  --icon-color: #4f6f8f;
  --icon-border-color: transparent;
  --icon-border-shadow-color: transparent;
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  padding: var(--default-card-margin);
}

.c5 {
  min-width: 0;
  width: 100%;
}

.c5 > svg {
  border: 1px solid var(--icon-border-color);
  border-radius: var(--icon-border-radius);
  color: var(--icon-color);
  padding: 2px;
  box-shadow: inset 0 0 0 5px var(--icon-border-shadow-color);
}

.c5 + * {
  margin-top: 16px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > :first-child + * {
  margin-top: 16px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        type="checkbox"
        value="example-1"
      />
      <div
        class="c2 c3"
        data-testid="rdt-card-main"
      >
        <div
          class="c4 c5"
          data-testid="rdt-card-header"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="rdt-card-title"
              font-size="14px"
              style="line-height: 24px;"
            >
              Title
            </div>
          </div>
          <svg
            aria-hidden="true"
            class="c8 c9"
            fill="currentcolor"
            focusable="false"
            height="24"
            role="img"
            style="--icon-border-radius: 4px; border-width: 1px;"
            tabindex="-1"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3z"
            />
          </svg>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard Radio Card should render checked state UI correctly 1`] = `
<DocumentFragment>
  .c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c9 {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-size: 14px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:focus-visible + div {
  --icon-border-color: #4f6f8f;
  --icon-border-shadow-color: #f4f6f8;
}

.c1:active + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked + div {
  --background-color: #e8f2ff;
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:checked:hover + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked:focus-visible + div {
  --icon-border-color: #049;
}

.c1:disabled + div {
  color: #c0cad5;
}

.c3 {
  --background-color: #fff;
  --border-color: transparent;
  --default-card-margin: 16px;
  --icon-color: #4f6f8f;
  --icon-border-color: transparent;
  --icon-border-shadow-color: transparent;
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  padding: var(--default-card-margin);
}

.c5 {
  min-width: 0;
  width: 100%;
}

.c5 > svg {
  border: 1px solid var(--icon-border-color);
  border-radius: var(--icon-border-radius);
  color: var(--icon-color);
  padding: 2px;
  box-shadow: inset 0 0 0 5px var(--icon-border-shadow-color);
}

.c5 + * {
  margin-top: 16px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > :first-child + * {
  margin-top: 16px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        checked=""
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3"
        data-testid="rdt-card-main"
      >
        <div
          class="c4 c5"
          data-testid="rdt-card-header"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="rdt-card-title"
              font-size="14px"
              style="line-height: 24px;"
            >
              Title
            </div>
          </div>
          <svg
            aria-hidden="true"
            class="c8 c9"
            fill="currentcolor"
            focusable="false"
            height="24"
            role="img"
            style="--icon-border-radius: 9999px; border-width: 1px;"
            tabindex="-1"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 7c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0-5C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z"
            />
          </svg>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard Radio Card should render unchecked state UI correctly 1`] = `
<DocumentFragment>
  .c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c9 {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-size: 14px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:focus-visible + div {
  --icon-border-color: #4f6f8f;
  --icon-border-shadow-color: #f4f6f8;
}

.c1:active + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked + div {
  --background-color: #e8f2ff;
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:checked:hover + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked:focus-visible + div {
  --icon-border-color: #049;
}

.c1:disabled + div {
  color: #c0cad5;
}

.c3 {
  --background-color: #fff;
  --border-color: transparent;
  --default-card-margin: 16px;
  --icon-color: #4f6f8f;
  --icon-border-color: transparent;
  --icon-border-shadow-color: transparent;
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  padding: var(--default-card-margin);
}

.c5 {
  min-width: 0;
  width: 100%;
}

.c5 > svg {
  border: 1px solid var(--icon-border-color);
  border-radius: var(--icon-border-radius);
  color: var(--icon-color);
  padding: 2px;
  box-shadow: inset 0 0 0 5px var(--icon-border-shadow-color);
}

.c5 + * {
  margin-top: 16px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > :first-child + * {
  margin-top: 16px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3"
        data-testid="rdt-card-main"
      >
        <div
          class="c4 c5"
          data-testid="rdt-card-header"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="rdt-card-title"
              font-size="14px"
              style="line-height: 24px;"
            >
              Title
            </div>
          </div>
          <svg
            aria-hidden="true"
            class="c8 c9"
            fill="currentcolor"
            focusable="false"
            height="24"
            role="img"
            style="--icon-border-radius: 9999px; border-width: 1px;"
            tabindex="-1"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z"
            />
          </svg>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard Toggle Card should render checked state UI correctly 1`] = `
<DocumentFragment>
  .c21 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 16;
}

.c22 {
  outline: none;
}

.c8 {
  width: 24;
  height: 24;
}

.c9 {
  background-color: #0068ef;
  color: #fff;
  border-radius: 9999px;
  height: 24px;
  width: 45px;
}

.c15 {
  border-radius: 9999px;
  width: calc(100% + 8px);
}

.c18 {
  background-color: #fff;
  color: #001833;
  border-radius: 9999px;
  width: 20px;
}

.c16 {
  position: absolute;
  left: -4px;
  top: -4px;
}

.c19 {
  position: absolute;
  left: 23px;
  top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-size: 14px;
}

.c11 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: #001833;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c0cad5;
  padding: 0px;
  font-size: 16px;
  border-radius: 12px;
}

.c11::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c11::-moz-placeholder {
  color: #4f6f8f;
}

.c11:-ms-input-placeholder {
  color: #4f6f8f;
}

.c11::placeholder {
  color: #4f6f8f;
}

.c11::-ms-clear {
  display: none;
}

.c11:disabled,
.c11:-moz-read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c11:disabled,
.c11:read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c11:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:focus-visible + div {
  --icon-border-color: #4f6f8f;
  --icon-border-shadow-color: #f4f6f8;
}

.c1:active + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked + div {
  --background-color: #e8f2ff;
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:checked:hover + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked:focus-visible + div {
  --icon-border-color: #049;
}

.c1:disabled + div {
  color: #c0cad5;
}

.c3 {
  --background-color: #fff;
  --border-color: transparent;
  --default-card-margin: 16px;
  --icon-color: #4f6f8f;
  --icon-border-color: transparent;
  --icon-border-shadow-color: transparent;
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  padding: var(--default-card-margin);
}

.c5 {
  min-width: 0;
  width: 100%;
}

.c5 > svg {
  border: 1px solid var(--icon-border-color);
  border-radius: var(--icon-border-radius);
  color: var(--icon-color);
  padding: 2px;
  box-shadow: inset 0 0 0 5px var(--icon-border-shadow-color);
}

.c5 + * {
  margin-top: 16px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > :first-child + * {
  margin-top: 16px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c13 {
  position: absolute;
  z-index: 5;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  cursor: pointer;
}

.c17 {
  height: calc(100% + 8px);
  opacity: 0;
  background-color: #0068ef4C;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  pointer-events: none;
  -webkit-transition: left 0.3s;
  transition: left 0.3s;
}

.c10 {
  position: relative;
  height: 24px;
  -webkit-transition: background-color 0.3s;
  transition: background-color 0.3s;
  min-width: 45px;
}

.c10 .c12:focus + .c14 {
  opacity: 1;
}

@media screen and (min-width:32em) {

}

@media screen and (min-width:40em) {
  .c11 {
    font-size: 14px;
  }
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        checked=""
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        type="checkbox"
        value="example-1"
      />
      <div
        class="c2 c3"
        data-testid="rdt-card-main"
      >
        <div
          class="c4 c5"
          data-testid="rdt-card-header"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="rdt-card-title"
              font-size="14px"
              style="line-height: 24px;"
            >
              Title
            </div>
          </div>
          <div
            class="c8"
            size="24"
            style="--icon-border-radius: 9999px; border-width: 1px;"
          >
            <div
              class="c9 c10"
              color="primary.base"
              height="24"
              width="45"
            >
              <input
                aria-checked="true"
                checked=""
                class="c11 c12 c13"
                font-size="2,,1"
                role="switch"
                tabindex="0"
                type="checkbox"
              />
              <div
                class="c14 c15 c16 c17"
                width="calc(100% + 8px)"
              />
              <div
                class="c18 c19 c20"
                color="background.lightest"
                width="20px"
              >
                <svg
                  aria-hidden="true"
                  class="c21 c22"
                  fill="currentcolor"
                  focusable="false"
                  height="16"
                  role="img"
                  tabindex="-1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.6 15.6l-4.2-4.2L3 12.8l5.6 5.6 12-12L19.2 5 8.6 15.6z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard Toggle Card should render unchecked state UI correctly 1`] = `
<DocumentFragment>
  .c21 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 16;
}

.c22 {
  outline: none;
}

.c8 {
  width: 24;
  height: 24;
}

.c9 {
  background-color: #4f6f8f;
  color: #fff;
  border-radius: 9999px;
  height: 24px;
  width: 45px;
}

.c15 {
  border-radius: 9999px;
  width: calc(100% + 8px);
}

.c18 {
  background-color: #fff;
  color: #001833;
  border-radius: 9999px;
  width: 20px;
}

.c16 {
  position: absolute;
  left: -4px;
  top: -4px;
}

.c19 {
  position: absolute;
  left: 2px;
  top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-size: 14px;
}

.c11 {
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: #001833;
  background-color: transparent;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 14px 12px 14px 12px;
  border-color: #c0cad5;
  padding: 0px;
  font-size: 16px;
  border-radius: 12px;
}

.c11::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c11::-moz-placeholder {
  color: #4f6f8f;
}

.c11:-ms-input-placeholder {
  color: #4f6f8f;
}

.c11::placeholder {
  color: #4f6f8f;
}

.c11::-ms-clear {
  display: none;
}

.c11:disabled,
.c11:-moz-read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c11:disabled,
.c11:read-only {
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c11:focus {
  outline: 0;
  border-color: #0068ef;
  box-shadow: 0 0 0 2px #0068ef;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:focus-visible + div {
  --icon-border-color: #4f6f8f;
  --icon-border-shadow-color: #f4f6f8;
}

.c1:active + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked + div {
  --background-color: #e8f2ff;
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:checked:hover + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked:focus-visible + div {
  --icon-border-color: #049;
}

.c1:disabled + div {
  color: #c0cad5;
}

.c3 {
  --background-color: #fff;
  --border-color: transparent;
  --default-card-margin: 16px;
  --icon-color: #4f6f8f;
  --icon-border-color: transparent;
  --icon-border-shadow-color: transparent;
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  padding: var(--default-card-margin);
}

.c5 {
  min-width: 0;
  width: 100%;
}

.c5 > svg {
  border: 1px solid var(--icon-border-color);
  border-radius: var(--icon-border-radius);
  color: var(--icon-color);
  padding: 2px;
  box-shadow: inset 0 0 0 5px var(--icon-border-shadow-color);
}

.c5 + * {
  margin-top: 16px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > :first-child + * {
  margin-top: 16px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c13 {
  position: absolute;
  z-index: 5;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  cursor: pointer;
}

.c17 {
  height: calc(100% + 8px);
  opacity: 0;
  background-color: #4f6f8f4C;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
  pointer-events: none;
  -webkit-transition: left 0.3s;
  transition: left 0.3s;
}

.c10 {
  position: relative;
  height: 24px;
  -webkit-transition: background-color 0.3s;
  transition: background-color 0.3s;
  min-width: 45px;
}

.c10 .c12:focus + .c14 {
  opacity: 1;
}

@media screen and (min-width:32em) {

}

@media screen and (min-width:40em) {
  .c11 {
    font-size: 14px;
  }
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        type="checkbox"
        value="example-1"
      />
      <div
        class="c2 c3"
        data-testid="rdt-card-main"
      >
        <div
          class="c4 c5"
          data-testid="rdt-card-header"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="rdt-card-title"
              font-size="14px"
              style="line-height: 24px;"
            >
              Title
            </div>
          </div>
          <div
            class="c8"
            size="24"
            style="--icon-border-radius: 9999px; border-width: 1px;"
          >
            <div
              class="c9 c10"
              color="background.dark"
              height="24"
              width="45"
            >
              <input
                aria-checked="false"
                class="c11 c12 c13"
                font-size="2,,1"
                role="switch"
                tabindex="0"
                type="checkbox"
              />
              <div
                class="c14 c15 c16 c17"
                width="calc(100% + 8px)"
              />
              <div
                class="c18 c19 c20"
                color="background.lightest"
                width="20px"
              >
                <svg
                  aria-hidden="true"
                  class="c21 c22"
                  fill="currentcolor"
                  focusable="false"
                  height="16"
                  role="img"
                  tabindex="-1"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.6 15.6l-4.2-4.2L3 12.8l5.6 5.6 12-12L19.2 5 8.6 15.6z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard common should render bold title correctly 1`] = `
<DocumentFragment>
  .c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c9 {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-weight: 700;
  font-size: 16px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:focus-visible + div {
  --icon-border-color: #4f6f8f;
  --icon-border-shadow-color: #f4f6f8;
}

.c1:active + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked + div {
  --background-color: #e8f2ff;
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:checked:hover + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked:focus-visible + div {
  --icon-border-color: #049;
}

.c1:disabled + div {
  color: #c0cad5;
}

.c3 {
  --background-color: #fff;
  --border-color: transparent;
  --default-card-margin: 16px;
  --icon-color: #4f6f8f;
  --icon-border-color: transparent;
  --icon-border-shadow-color: transparent;
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  padding: var(--default-card-margin);
}

.c5 {
  min-width: 0;
  width: 100%;
}

.c5 > svg {
  border: 1px solid var(--icon-border-color);
  border-radius: var(--icon-border-radius);
  color: var(--icon-color);
  padding: 2px;
  box-shadow: inset 0 0 0 5px var(--icon-border-shadow-color);
}

.c5 + * {
  margin-top: 16px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > :first-child + * {
  margin-top: 16px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3"
        data-testid="rdt-card-main"
      >
        <div
          class="c4 c5"
          data-testid="rdt-card-header"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="rdt-card-title"
              font-size="16px"
              style="line-height: 24px;"
            >
              Title
            </div>
          </div>
          <svg
            aria-hidden="true"
            class="c8 c9"
            fill="currentcolor"
            focusable="false"
            height="24"
            role="img"
            style="--icon-border-radius: 9999px; border-width: 1px;"
            tabindex="-1"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z"
            />
          </svg>
        </div>
        <div
          class=""
        >
          Happy Priceline!
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard common should render children correctly 1`] = `
<DocumentFragment>
  .c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c9 {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-size: 14px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:focus-visible + div {
  --icon-border-color: #4f6f8f;
  --icon-border-shadow-color: #f4f6f8;
}

.c1:active + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked + div {
  --background-color: #e8f2ff;
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:checked:hover + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked:focus-visible + div {
  --icon-border-color: #049;
}

.c1:disabled + div {
  color: #c0cad5;
}

.c3 {
  --background-color: #fff;
  --border-color: transparent;
  --default-card-margin: 16px;
  --icon-color: #4f6f8f;
  --icon-border-color: transparent;
  --icon-border-shadow-color: transparent;
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  padding: var(--default-card-margin);
}

.c5 {
  min-width: 0;
  width: 100%;
}

.c5 > svg {
  border: 1px solid var(--icon-border-color);
  border-radius: var(--icon-border-radius);
  color: var(--icon-color);
  padding: 2px;
  box-shadow: inset 0 0 0 5px var(--icon-border-shadow-color);
}

.c5 + * {
  margin-top: 16px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > :first-child + * {
  margin-top: 16px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3"
        data-testid="rdt-card-main"
      >
        <div
          class="c4 c5"
          data-testid="rdt-card-header"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="rdt-card-title"
              font-size="14px"
              style="line-height: 24px;"
            >
              Title
            </div>
          </div>
          <svg
            aria-hidden="true"
            class="c8 c9"
            fill="currentcolor"
            focusable="false"
            height="24"
            role="img"
            style="--icon-border-radius: 9999px; border-width: 1px;"
            tabindex="-1"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z"
            />
          </svg>
        </div>
        <div
          class=""
        >
          Happy Priceline!
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard common should render children next to title correctly 1`] = `
<DocumentFragment>
  .c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c9 {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-size: 14px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:focus-visible + div {
  --icon-border-color: #4f6f8f;
  --icon-border-shadow-color: #f4f6f8;
}

.c1:active + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked + div {
  --background-color: #e8f2ff;
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:checked:hover + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked:focus-visible + div {
  --icon-border-color: #049;
}

.c1:disabled + div {
  color: #c0cad5;
}

.c3 {
  --background-color: #fff;
  --border-color: transparent;
  --default-card-margin: 16px;
  --icon-color: #4f6f8f;
  --icon-border-color: transparent;
  --icon-border-shadow-color: transparent;
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  padding: var(--default-card-margin);
}

.c5 {
  min-width: 0;
  width: 100%;
}

.c5 > svg {
  border: 1px solid var(--icon-border-color);
  border-radius: var(--icon-border-radius);
  color: var(--icon-color);
  padding: 2px;
  box-shadow: inset 0 0 0 5px var(--icon-border-shadow-color);
}

.c5 + * {
  margin-top: 16px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > :first-child + * {
  margin-top: 16px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3"
        data-testid="rdt-card-main"
      >
        <div
          class="c4 c5"
          data-testid="rdt-card-header"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="rdt-card-title"
              font-size="14px"
              style="line-height: 24px;"
            >
              Title
            </div>
            <div
              class=""
            >
              Happy Priceline!
            </div>
          </div>
          <svg
            aria-hidden="true"
            class="c8 c9"
            fill="currentcolor"
            focusable="false"
            height="24"
            role="img"
            style="--icon-border-radius: 9999px; border-width: 1px;"
            tabindex="-1"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z"
            />
          </svg>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard common should render default UI correctly 1`] = `
<DocumentFragment>
  .c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c9 {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  font-size: 14px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:focus-visible + div {
  --icon-border-color: #4f6f8f;
  --icon-border-shadow-color: #f4f6f8;
}

.c1:active + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked + div {
  --background-color: #e8f2ff;
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:checked:hover + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked:focus-visible + div {
  --icon-border-color: #049;
}

.c1:disabled + div {
  color: #c0cad5;
}

.c3 {
  --background-color: #fff;
  --border-color: transparent;
  --default-card-margin: 16px;
  --icon-color: #4f6f8f;
  --icon-border-color: transparent;
  --icon-border-shadow-color: transparent;
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  padding: var(--default-card-margin);
}

.c5 {
  min-width: 0;
  width: 100%;
}

.c5 > svg {
  border: 1px solid var(--icon-border-color);
  border-radius: var(--icon-border-radius);
  color: var(--icon-color);
  padding: 2px;
  box-shadow: inset 0 0 0 5px var(--icon-border-shadow-color);
}

.c5 + * {
  margin-top: 16px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > :first-child + * {
  margin-top: 16px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3"
        data-testid="rdt-card-main"
      >
        <div
          class="c4 c5"
          data-testid="rdt-card-header"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="rdt-card-title"
              font-size="14px"
              style="line-height: 24px;"
            >
              Title
            </div>
          </div>
          <svg
            aria-hidden="true"
            class="c8 c9"
            fill="currentcolor"
            focusable="false"
            height="24"
            role="img"
            style="--icon-border-radius: 9999px; border-width: 1px;"
            tabindex="-1"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z"
            />
          </svg>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioCheckToggleCard common should render left button UI correctly 1`] = `
<DocumentFragment>
  .c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24;
}

.c9 {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c7 {
  font-size: 14px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1:hover + div {
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:focus-visible + div {
  --icon-border-color: #4f6f8f;
  --icon-border-shadow-color: #f4f6f8;
}

.c1:active + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked + div {
  --background-color: #e8f2ff;
  --border-color: #0068ef;
  --icon-color: #0068ef;
}

.c1:checked:hover + div {
  --border-color: #049;
  --icon-color: #049;
}

.c1:checked:focus-visible + div {
  --icon-border-color: #049;
}

.c1:disabled + div {
  color: #c0cad5;
}

.c3 {
  --background-color: #fff;
  --border-color: transparent;
  --default-card-margin: 16px;
  --icon-color: #4f6f8f;
  --icon-border-color: transparent;
  --icon-border-shadow-color: transparent;
  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 12px;
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
  padding: var(--default-card-margin);
}

.c5 {
  min-width: 0;
  width: 100%;
}

.c5 > svg {
  border: 1px solid var(--icon-border-color);
  border-radius: var(--icon-border-radius);
  color: var(--icon-color);
  padding: 2px;
  box-shadow: inset 0 0 0 5px var(--icon-border-shadow-color);
}

.c5 + * {
  margin-top: 16px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > :first-child + * {
  margin-top: 16px;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <label
      data-testid="rdt-card-label"
      for="radio-1_example-1"
    >
      <input
        class="c1"
        id="radio-1_example-1"
        name="radio-1"
        type="radio"
        value="example-1"
      />
      <div
        class="c2 c3"
        data-testid="rdt-card-main"
      >
        <div
          class="c4 c5"
          data-testid="rdt-card-header"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="rdt-card-title"
              font-size="14px"
              style="line-height: 24px;"
            >
              Title
            </div>
          </div>
          <svg
            aria-hidden="true"
            class="c8 c9"
            fill="currentcolor"
            focusable="false"
            height="24"
            role="img"
            style="--icon-border-radius: 9999px; border-width: 1px;"
            tabindex="-1"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8z"
            />
          </svg>
        </div>
      </div>
    </label>
  </div>
</DocumentFragment>
`;
